Update course images to local files

--- a/dashboard.html
+++ b/dashboard.html
@@ -92,7 +92,7 @@
                     <div class="course-carousel" id="courseCarousel">
                         <div class="course-card" data-course-id="1">
                             <div class="course-image">
-                                <img src="https://via.placeholder.com/400x250/8B1538/FFFFFF?text=高等数学" alt="高等数学">
+                                <img src="images/高等数学.jpg" alt="高等数学">
                             </div>
                             <div class="course-info">
                                 <h3 class="course-title">高等数学</h3>
@@ -105,7 +105,7 @@
                         </div>
                         <div class="course-card" data-course-id="2">
                             <div class="course-image">
-                                <img src="https://via.placeholder.com/400x250/1E3A8A/FFFFFF?text=线性代数" alt="线性代数">
+                                <img src="images/线性代数.jpg" alt="线性代数">
                             </div>
                             <div class="course-info">
                                 <h3 class="course-title">线性代数</h3>
@@ -118,7 +118,7 @@
                         </div>
                         <div class="course-card" data-course-id="3">
                             <div class="course-image">
-                                <img src="https://via.placeholder.com/400x250/166534/FFFFFF?text=数据结构" alt="数据结构">
+                                <img src="images/数据结构与算法.jpg" alt="数据结构">
                             </div>
                             <div class="course-info">
                                 <h3 class="course-title">数据结构与算法</h3>
@@ -131,7 +131,7 @@
                         </div>
                         <div class="course-card" data-course-id="4">
                             <div class="course-image">
-                                <img src="https://via.placeholder.com/400x250/7C2D12/FFFFFF?text=英语写作" alt="英语写作">
+                                <img src="images/英语学术写作.jpg" alt="英语写作">
                             </div>
                             <div class="course-info">
                                 <h3 class="course-title">英语学术写作</h3>
@@ -144,7 +144,7 @@
                         </div>
                         <div class="course-card" data-course-id="5">
                             <div class="course-image">
-                                <img src="https://via.placeholder.com/400x250/581C87/FFFFFF?text=机器学习" alt="机器学习">
+                                <img src="images/机器学习基础.jpg" alt="机器学习">
                             </div>
                             <div class="course-info">
                                 <h3 class="course-title">机器学习基础</h3>
